--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
     <title>Contact</title>
     <h3>My contact details:</h4>
 
-        <p>+48576203482</p>
-        <p>Ukraine/Poland</p>
-        <p>jula1panchuk@gmail.com</p>
+        <p>+99988877766</p>
+        <p>My adress</p>
+        <p>myemail@gmail.com</p>
         <hr>
         <form class="" action="mailto:jula1panchuk@gmail.com" method="post" enctype="text/plain">
             <br>
