--- a/index.html
+++ b/index.html
@@ -13,23 +13,10 @@
             <td><img height="200" src="Yuliia.png"></td>
             <td>
                 <h1>Yuliia Panchuk</h1>
-                <p><em> <a href="https://tisch.nyu.edu/">Tisch University</a> Professor</em></p>
-                <p>I am a professor at <strong>Cornell University</strong>. My research focuses on the interaction of algorithms and networks, and the roles they play in large-scale social and information systems. My work has been supported by an NSF Career
-                    Award, an ONR Young Investigator Award.</td>
+                <p><a>Web developer</a></p>
+                <p>I am a Web Developer. I just have started this path and gathering a tones of information to become a good Web Developer and start my career.</td>
         </tr>
     </table>
-
-    </p>
-    <hr>
-    <h3><strong>Books and Teaching</strong></h3>
-
-    <ul>
-        <li>D. Easley, J. Kleinberg. Networks, Crowds, and Markets: Reasoning About a Highly Connected World. <a href="https://www.cambridge.org/">Cambridge University Press</a>, 2010. This book is based on an inter-disciplinary course that we teach entitled
-            Networks.
-        </li>
-        <li>An on-line course on edX entitled Networks, Crowds, and Markets, with David Easley and Eva Tardos.</li>
-    </ul>
-
     <hr>
     <h3>Work Experience</h3>
 
@@ -46,12 +33,20 @@
 
         </tfoot>
 
-
         <td>2018 - current</td>
         <td>Customer Support at FlyFlex</td>
+        <tr>
+            <td>2017 - 2017</td>
+            <td>Inter in Translation Bereau</td>
+        </tr>
+        <tr>
+            <td>2017 - 2017</td>
+            <td>Teacher of English</td>
         </tr>
         <td>2015 - 2016</td>
         <td>Worker in Shtock factory</td>
+        </tr>
+
     </table>
     <hr>
     <h3>Languages</h3>
@@ -82,12 +77,12 @@
                     <tr>
                         <td>Swedish</td>
                         <td>⭐☆☆☆☆</td>
-                    </tr>
-                </table>
+            </td>
+            </tr>
+            </table>
     </table>
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
-    <br>
+    <a href="hobbies.html">My Hobbies</a><br>
     <a href="contact.html">Contact</a>
 </body>
 
