--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -18,13 +19,13 @@
         </tr>
     </table>
     <hr>
+
     <h3>Work Experience</h3>
 
     <table>
         <thead>
             <th>Dates</th>
             <th>Work</th>
-            </tr>
         </thead>
         <tbody>
 
@@ -43,8 +44,9 @@
             <td>2017 - 2017</td>
             <td>Teacher of English</td>
         </tr>
-        <td>2015 - 2016</td>
-        <td>Worker in Shtock factory</td>
+        <tr>
+            <td>2015 - 2016</td>
+            <td>Worker in Shtock factory</td>
         </tr>
 
     </table>
@@ -84,6 +86,7 @@
     <hr>
     <a href="hobbies.html">My Hobbies</a><br>
     <a href="contact.html">Contact</a>
+
 </body>
 
 </html>
